--- a/src/output.css
+++ b/src/output.css
@@ -570,8 +570,8 @@ video {
   left: 0px;
 }
 
-.right-0 {
-  right: 0px;
+.right-1 {
+  right: 0.25rem;
 }
 
 .top-0 {
@@ -582,12 +582,8 @@ video {
   top: 3.75rem;
 }
 
-.right-2 {
-  right: 0.5rem;
-}
-
-.right-1 {
-  right: 0.25rem;
+.z-10 {
+  z-index: 10;
 }
 
 .col-span-1 {
@@ -614,60 +610,229 @@ video {
   grid-row: span 1 / span 1;
 }
 
-.m-\[-5rem\] {
-  margin: -5rem;
+.m-5 {
+  margin: 1.25rem;
+}
+
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .ml-3 {
   margin-left: 0.75rem;
 }
 
-.ml-\[-5rem\] {
-  margin-left: -5rem;
-}
-
-.ml-\[-4rem\] {
-  margin-left: -4rem;
-}
-
-.ml-\[-6rem\] {
-  margin-left: -6rem;
-}
-
-.mt-\[-3rem\] {
-  margin-top: -3rem;
+.ml-\[-5\.75rem\] {
+  margin-left: -5.75rem;
 }
 
 .mt-\[-2rem\] {
   margin-top: -2rem;
 }
 
-.mt-\[-2\.5rem\] {
-  margin-top: -2.5rem;
+.ml-\[1rem\] {
+  margin-left: 1rem;
 }
 
-.mt-\[-1\.5rem\] {
-  margin-top: -1.5rem;
+.mt-\[2rem\] {
+  margin-top: 2rem;
 }
 
-.ml-\[-4\.5rem\] {
-  margin-left: -4.5rem;
+.mt-\[1rem\] {
+  margin-top: 1rem;
 }
 
-.mt-\[-1\.25rem\] {
-  margin-top: -1.25rem;
+.ml-\[-1rem\] {
+  margin-left: -1rem;
 }
 
-.ml-\[-4\.rem\] {
-  margin-left: -4.rem;
+.ml-\[-0\.5rem\] {
+  margin-left: -0.5rem;
 }
 
-.ml-\[-5\.5rem\] {
-  margin-left: -5.5rem;
+.ml-\[-0\.25rem\] {
+  margin-left: -0.25rem;
 }
 
-.ml-\[-5\.75rem\] {
-  margin-left: -5.75rem;
+.mt-\[0\.25rem\] {
+  margin-top: 0.25rem;
+}
+
+.ml-\[-0\.20rem\] {
+  margin-left: -0.20rem;
+}
+
+.ml-\[-0\.15rem\] {
+  margin-left: -0.15rem;
+}
+
+.mt-\[0\.20rem\] {
+  margin-top: 0.20rem;
+}
+
+.ml-\[-0\.16rem\] {
+  margin-left: -0.16rem;
+}
+
+.ml-\[-0\.19rem\] {
+  margin-left: -0.19rem;
+}
+
+.ml-\[-0\.1rem\] {
+  margin-left: -0.1rem;
+}
+
+.mt-\[0\.2rem\] {
+  margin-top: 0.2rem;
+}
+
+.ml-\[-0\.2rem\] {
+  margin-left: -0.2rem;
+}
+
+.ml-\[-0\.05rem\] {
+  margin-left: -0.05rem;
+}
+
+.ml-\[-0\.02rem\] {
+  margin-left: -0.02rem;
+}
+
+.ml-\[-0\.01rem\] {
+  margin-left: -0.01rem;
+}
+
+.mt-\[0\.5rem\] {
+  margin-top: 0.5rem;
+}
+
+.ml-\[-0\.26rem\] {
+  margin-left: -0.26rem;
+}
+
+.ml-\[-0\.24rem\] {
+  margin-left: -0.24rem;
+}
+
+.mt-\[0\.9rem\] {
+  margin-top: 0.9rem;
+}
+
+.mt-\[0\.0rem\] {
+  margin-top: 0.0rem;
+}
+
+.ml-\[-1\.25rem\] {
+  margin-left: -1.25rem;
+}
+
+.ml-\[-5rem\] {
+  margin-left: -5rem;
+}
+
+.ml-\[-4\.25rem\] {
+  margin-left: -4.25rem;
+}
+
+.ml-\[-4\.20rem\] {
+  margin-left: -4.20rem;
+}
+
+.ml-\[-4\.15rem\] {
+  margin-left: -4.15rem;
+}
+
+.ml-\[-4\.10rem\] {
+  margin-left: -4.10rem;
+}
+
+.ml-\[-4\.0rem\] {
+  margin-left: -4.0rem;
+}
+
+.ml-\[-4\.1rem\] {
+  margin-left: -4.1rem;
+}
+
+.mt-\[1\.0rem\] {
+  margin-top: 1.0rem;
+}
+
+.mt-\[-1\.0rem\] {
+  margin-top: -1.0rem;
+}
+
+.mt-\[-4\.0rem\] {
+  margin-top: -4.0rem;
+}
+
+.mt-\[-8\.0rem\] {
+  margin-top: -8.0rem;
+}
+
+.mt-\[-7\.0rem\] {
+  margin-top: -7.0rem;
+}
+
+.mt-\[-7\.5rem\] {
+  margin-top: -7.5rem;
+}
+
+.mt-\[-7\.8rem\] {
+  margin-top: -7.8rem;
+}
+
+.mt-\[-7\.6rem\] {
+  margin-top: -7.6rem;
+}
+
+.ml-\[-7\.24rem\] {
+  margin-left: -7.24rem;
+}
+
+.ml-\[-7\.84rem\] {
+  margin-left: -7.84rem;
+}
+
+.ml-\[-12\.84rem\] {
+  margin-left: -12.84rem;
+}
+
+.ml-\[-11\.84rem\] {
+  margin-left: -11.84rem;
+}
+
+.ml-\[-11\.8rem\] {
+  margin-left: -11.8rem;
+}
+
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+
+.line-clamp-4 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
 }
 
 .inline-block {
@@ -694,11 +859,6 @@ video {
   display: none;
 }
 
-.size-12 {
-  width: 3rem;
-  height: 3rem;
-}
-
 .size-5 {
   width: 1.25rem;
   height: 1.25rem;
@@ -714,13 +874,24 @@ video {
   height: 2.25rem;
 }
 
-.size-28 {
-  width: 7rem;
-  height: 7rem;
-}
-
 .h-0 {
   height: 0px;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-60 {
+  height: 15rem;
 }
 
 .h-9 {
@@ -739,26 +910,6 @@ video {
   height: 100vh;
 }
 
-.h-12 {
-  height: 3rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-28 {
-  height: 7rem;
-}
-
-.h-1 {
-  height: 0.25rem;
-}
-
 .h-20 {
   height: 5rem;
 }
@@ -767,37 +918,20 @@ video {
   height: 10rem;
 }
 
-.h-60 {
-  height: 15rem;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-44 {
-  height: 11rem;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
 .w-0 {
   width: 0px;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
 .w-60 {
   width: 15rem;
+}
+
+.w-72 {
+  width: 18rem;
 }
 
 .w-9 {
@@ -808,36 +942,8 @@ video {
   width: 100%;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
 .w-auto {
   width: auto;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-20 {
-  width: 5rem;
 }
 
 .w-fit {
@@ -845,28 +951,16 @@ video {
   width: fit-content;
 }
 
-.w-48 {
-  width: 12rem;
+.w-40 {
+  width: 10rem;
 }
 
 .w-52 {
   width: 13rem;
 }
 
-.w-72 {
-  width: 18rem;
-}
-
 .grow {
   flex-grow: 1;
-}
-
-.auto-cols-auto {
-  grid-auto-columns: auto;
-}
-
-.grid-flow-row {
-  grid-auto-flow: row;
 }
 
 .grid-flow-col {
@@ -885,16 +979,8 @@ video {
   grid-template-columns: 4fr 1fr;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-\[auto-fit\2c minmax\(288px\2c 1fr\)\] {
-  grid-template-columns: auto-fit minmax(288px,1fr);
-}
-
-.grid-cols-\[repeat\(auto-fit\2c minmax\(288px\2c 1fr\)\)\] {
-  grid-template-columns: repeat(auto-fit,minmax(288px,1fr));
+.grid-cols-\[auto_1fr\] {
+  grid-template-columns: auto 1fr;
 }
 
 .grid-rows-2 {
@@ -909,20 +995,12 @@ video {
   grid-template-rows: auto auto auto auto 1fr;
 }
 
-.grid-rows-\[auto_auto\] {
-  grid-template-rows: auto auto;
+.grid-rows-1 {
+  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
-.grid-rows-\[1fr_autop\] {
-  grid-template-rows: 1fr autop;
-}
-
-.grid-rows-\[1fr_auto\] {
-  grid-template-rows: 1fr auto;
-}
-
-.grid-rows-\[auto-auto\] {
-  grid-template-rows: auto-auto;
+.grid-rows-\[auto_2\.25rem\] {
+  grid-template-rows: auto 2.25rem;
 }
 
 .flex-row {
@@ -969,6 +1047,10 @@ video {
   gap: 1rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .self-center {
   align-self: center;
 }
@@ -981,10 +1063,6 @@ video {
   justify-self: center;
 }
 
-.overflow-auto {
-  overflow: auto;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -993,8 +1071,8 @@ video {
   overflow: visible;
 }
 
-.overflow-scroll {
-  overflow: scroll;
+.overflow-x-auto {
+  overflow-x: auto;
 }
 
 .overflow-x-hidden {
@@ -1009,20 +1087,6 @@ video {
   overflow-y: scroll;
 }
 
-.truncate {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.text-ellipsis {
-  text-overflow: ellipsis;
-}
-
-.whitespace-nowrap {
-  white-space: nowrap;
-}
-
 .rounded-\[10px\] {
   border-radius: 10px;
 }
@@ -1035,21 +1099,25 @@ video {
   border-width: 2px;
 }
 
-.border-r-4 {
-  border-right-width: 4px;
+.border-r-2 {
+  border-right-width: 2px;
 }
 
-.border-contrast {
-  border-color: var(--contrast);
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
-.border-hover_color {
-  border-color: var(--hover);
+.border-l-2 {
+  border-left-width: 2px;
 }
 
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-contrast {
+  border-color: var(--contrast);
 }
 
 .bg-bg_color {
@@ -1058,6 +1126,11 @@ video {
 
 .bg-primary {
   background-color: var(--primary);
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1070,20 +1143,8 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-10\% {
-  --tw-gradient-from-position: 10%;
-}
-
-.from-\[1\%\] {
-  --tw-gradient-from-position: 1%;
-}
-
-.from-\[5\%\] {
-  --tw-gradient-from-position: 5%;
-}
-
-.from-\[3\%\] {
-  --tw-gradient-from-position: 3%;
+.from-\[\.5rem\] {
+  --tw-gradient-from-position: .5rem;
 }
 
 .via-primary {
@@ -1091,20 +1152,8 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--primary) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-.via-10\% {
-  --tw-gradient-via-position: 10%;
-}
-
-.via-\[1\%\] {
-  --tw-gradient-via-position: 1%;
-}
-
-.via-\[5\%\] {
-  --tw-gradient-via-position: 5%;
-}
-
-.via-\[3\%\] {
-  --tw-gradient-via-position: 3%;
+.via-\[\.5rem\] {
+  --tw-gradient-via-position: .5rem;
 }
 
 .to-primary {
@@ -1123,6 +1172,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1130,6 +1183,36 @@ video {
 
 .py-3 {
   padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-3 {
   padding-bottom: 0.75rem;
 }
 
@@ -1150,14 +1233,14 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -1174,6 +1257,10 @@ video {
 
 .text-text_color {
   color: var(--text);
+}
+
+.text-contrast {
+  color: var(--contrast);
 }
 
 .placeholder-contrast::-moz-placeholder {
@@ -1196,18 +1283,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-shadow_color {
   --tw-shadow-color: var(--shadow);
   --tw-shadow: var(--tw-shadow-colored);
@@ -1216,6 +1291,11 @@ video {
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.blur-sm {
+  --tw-blur: blur(4px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .backdrop-blur-md {
@@ -1234,6 +1314,34 @@ video {
   transition-property: width;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
+
+.line-clamp-4 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
 }
 
 .light
@@ -1264,8 +1372,20 @@ video {
   height: 14rem;
 }
 
-.hover\:w-72:hover {
-  width: 18rem;
+.hover\:w-\[2rems\]:hover {
+  width: 2rems;
+}
+
+.hover\:w-\[2rem\]:hover {
+  width: 2rem;
+}
+
+.hover\:w-\[20\]:hover {
+  width: 20;
+}
+
+.hover\:w-\[20rem\]:hover {
+  width: 20rem;
 }
 
 .hover\:bg-hover_color:hover {
@@ -1299,16 +1419,54 @@ video {
     grid-column: span 1 / span 1;
   }
 
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .md\:col-start-1 {
+    grid-column-start: 1;
+  }
+
   .md\:col-start-2 {
     grid-column-start: 2;
+  }
+
+  .md\:col-start-3 {
+    grid-column-start: 3;
+  }
+
+  .md\:col-end-2 {
+    grid-column-end: 2;
+  }
+
+  .md\:col-end-1 {
+    grid-column-end: 1;
   }
 
   .md\:row-span-2 {
     grid-row: span 2 / span 2;
   }
 
+  .md\:row-span-1 {
+    grid-row: span 1 / span 1;
+  }
+
   .md\:row-start-1 {
     grid-row-start: 1;
+  }
+
+  .md\:line-clamp-1 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+  }
+
+  .md\:line-clamp-3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
   }
 
   .md\:inline {
@@ -1327,9 +1485,41 @@ video {
     height: auto;
   }
 
+  .md\:h-full {
+    height: 100%;
+  }
+
   .md\:h-fit {
     height: -moz-fit-content;
     height: fit-content;
+  }
+
+  .md\:h-24 {
+    height: 6rem;
+  }
+
+  .md\:h-2 {
+    height: 0.5rem;
+  }
+
+  .md\:h-28 {
+    height: 7rem;
+  }
+
+  .md\:h-20 {
+    height: 5rem;
+  }
+
+  .md\:min-h-40 {
+    min-height: 10rem;
+  }
+
+  .md\:min-h-72 {
+    min-height: 18rem;
+  }
+
+  .md\:min-h-52 {
+    min-height: 13rem;
   }
 
   .md\:w-60 {
@@ -1340,13 +1530,21 @@ video {
     width: auto;
   }
 
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:w-max {
     width: -moz-max-content;
     width: max-content;
   }
 
-  .md\:w-full {
-    width: 100%;
+  .md\:auto-cols-\[100\%\] {
+    grid-auto-columns: 100%;
+  }
+
+  .md\:grid-flow-row {
+    grid-auto-flow: row;
   }
 
   .md\:grid-flow-dense {
@@ -1357,49 +1555,148 @@ video {
     grid-auto-rows: none;
   }
 
+  .md\:auto-rows-max {
+    grid-auto-rows: max-content;
+  }
+
+  .md\:auto-rows-\[full\] {
+    grid-auto-rows: full;
+  }
+
+  .md\:auto-rows-\[100\%\] {
+    grid-auto-rows: 100%;
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:grid-cols-\[auto_1fr\] {
     grid-template-columns: auto 1fr;
   }
 
-  .md\:grid-cols-\[repeat\(auto-fill\2c minmax\(100px\2c 1fr\)\)\] {
-    grid-template-columns: repeat(auto-fill,minmax(100px,1fr));
+  .md\:grid-cols-\[repeat\(auto-fill\2c minmax\(250px\2c 1fr\)\)\] {
+    grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
   }
 
-  .md\:grid-cols-\[repeat\(auto-fill\2c minmax\(288px\2c 1fr\)\)\] {
-    grid-template-columns: repeat(auto-fill,minmax(288px,1fr));
+  .md\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
-  .md\:grid-rows-none {
-    grid-template-rows: none;
+  .md\:gap-3 {
+    gap: 0.75rem;
   }
 
-  .md\:overflow-x-clip {
-    overflow-x: clip;
+  .md\:overflow-y-scroll {
+    overflow-y: scroll;
   }
 
   .md\:border-r-4 {
     border-right-width: 4px;
   }
 
+  .md\:border-b-2 {
+    border-bottom-width: 2px;
+  }
+
+  .md\:border-r-0 {
+    border-right-width: 0px;
+  }
+
+  .md\:border-b-0 {
+    border-bottom-width: 0px;
+  }
+
+  .md\:border-r-2 {
+    border-right-width: 2px;
+  }
+
   .md\:border-hover_color {
     border-color: var(--hover);
+  }
+
+  .md\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .md\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .md\:pt-3 {
+    padding-top: 0.75rem;
+  }
+
+  .md\:pt-6 {
+    padding-top: 1.5rem;
+  }
+
+  .md\:line-clamp-1 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+  }
+
+  .md\:line-clamp-3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:inline-block {
-    display: inline-block;
+  .lg\:col-span-3 {
+    grid-column: span 3 / span 3;
   }
 
-  .lg\:w-24 {
-    width: 6rem;
+  .lg\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .lg\:col-start-4 {
+    grid-column-start: 4;
+  }
+
+  .lg\:inline-block {
+    display: inline-block;
   }
 
   .lg\:w-28 {
     width: 7rem;
   }
 
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
   .lg\:gap-3 {
     gap: 0.75rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:col-span-3 {
+    grid-column: span 3 / span 3;
+  }
+
+  .xl\:col-start-4 {
+    grid-column-start: 4;
+  }
+
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
